Applies fixes to be able to build with Java 11 Move back from unavailable SNAPSHOT artifact to 3.0.8 parent version Skips some checks as they do not apply anymore or plugin versions are outdated anyway